--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/papaparse": "^5.3.11",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vite-plugin-node": "^3.1.0"
