feat: working redis set and get

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "types": ["node", "vite/client"],
-    "strict": false
+    "strict": true
   },
   "include": ["vite.config.*", "vitest.config.*", "src/**/*"]
 }
