--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fastify/redis": "^6.1.1",
     "fast-json-stringify": "^5.9.1",
     "fastify": "^4.24.3",
+    "ioredis": "^5.3.2",
     "papaparse": "^5.4.1"
   }
 }
