--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./dist/index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
